Throw meaningful exceptions when resource class scanning errors occur. This important to for tracking down deployment errors. Log a warning for a path that is not a directory or a jar file.